# vaultVK

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEPLOY_ORACLE.md  DEPLOY_RENDER.md  DEPLOY_VERCEL.md  Dockerfile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
bench/: bench_main.cpp
deploy/oracle/: .env.example  Caddyfile  docker-compose.oracle.yml
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  hooks.ts  index.css  store.ts  styles.css
frontend/src/components/: KeyTable.tsx  LagChart.tsx  NodeCard.tsx  OpsChart.tsx
frontend/src/hooks/: useClusterWS.ts
frontend/src/lib/: runtimeConfig.ts
frontend/src/pages/: Dashboard.tsx  Explorer.tsx  Raft.tsx
frontend/src/store/: clusterStore.ts  metricsStore.ts
gateway/: Dockerfile  cluster.py  main.py  metrics.py  requirements.txt  tlv_client.py
include/vaultkv/: compaction.h  crypto.h  memtable.h  protocol.h  raft.h  replication.h  server.h  sstable.h  storage_engine.h  types.h  util.h  wal.h
nginx/: nginx.conf
scripts/: oracle_bootstrap.sh  oracle_deploy.sh  quorum_demo.ps1  quorum_demo.py  quorum_demo.sh  run_cluster.ps1  run_cluster.sh  tlv_client.py  verify_all.ps1  verify_all.sh
src/: compaction.cpp  crypto.cpp  main.cpp  memtable.cpp  protocol.cpp  raft.cpp  replication.cpp  server.cpp  sstable.cpp  storage_engine.cpp  util.cpp  wal.cpp
tests/: test_common.h  test_compaction.cpp  test_main.cpp  test_memtable.cpp  test_protocol.cpp  test_replication.cpp  test_sstable.cpp  test_storage_engine.cpp  test_wal.cpp
tools/: vaultkv-cli.cpp  vaultkv-inspect.cpp
